[gd_scene load_steps=9 format=3 uid="uid://dtroqg3ihgovx"]

[ext_resource type="Script" path="res://scripts/cursed_wizard.gd" id="1_jjurw"]
[ext_resource type="Texture2D" uid="uid://coaxar7nfra3y" path="res://assets/kenney_tiny-dungeon/Tiles/tile_0111.png" id="1_vlcok"]
[ext_resource type="PackedScene" uid="uid://b0ehm5jgg6a4e" path="res://Components/unit_health_bar.tscn" id="3_ltur1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vv56m"]
radius = 7.0
height = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_0jjmm"]
radius = 906.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mgrve"]
size = Vector2(16, 17)

[sub_resource type="Animation" id="Animation_7d7bq"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("wizard_sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2.08165e-12, -2), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("wizard_sprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_euhm4"]
_data = {
"idle": SubResource("Animation_7d7bq")
}

[node name="CursedWizard" type="CharacterBody2D" node_paths=PackedStringArray("repulsionArea", "attackRadius", "health_display") groups=["enemy", "unit"]]
scale = Vector2(1.5, 1.5)
script = ExtResource("1_jjurw")
repulsionArea = NodePath("replusionForce")
attackRadius = NodePath("attackRadius")
health_display = NodePath("unit_health_bar")

[node name="wizard_sprite" type="Node2D" parent="."]

[node name="wizard_particles" type="CPUParticles2D" parent="wizard_sprite"]
position = Vector2(2.08165e-12, -3)
amount = 15
emission_shape = 1
emission_sphere_radius = 4.08
direction = Vector2(2.08165e-12, 1)
spread = 10.0
gravity = Vector2(2.08165e-12, 2.08165e-12)
initial_velocity_min = 30.0
initial_velocity_max = 30.0
damping_min = 40.0
damping_max = 40.0
scale_amount_min = 2.5
scale_amount_max = 2.5
color = Color(0.92549, 1, 0.92549, 1)

[node name="wizard_sprite" type="Sprite2D" parent="wizard_sprite"]
texture = ExtResource("1_vlcok")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-0.666667, -0.666667)
shape = SubResource("CapsuleShape2D_vv56m")

[node name="attackRadius" type="Area2D" parent="."]
visible = false
collision_layer = 5
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="attackRadius"]
visible = false
shape = SubResource("CircleShape2D_0jjmm")

[node name="replusionForce" type="Area2D" parent="."]
visible = false
collision_layer = 5
collision_mask = 5

[node name="CollisionShape2D2" type="CollisionShape2D" parent="replusionForce"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_mgrve")

[node name="attack_rate" type="Timer" parent="."]
one_shot = true

[node name="attack_buffer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
target_desired_distance = 20.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_euhm4")
}

[node name="attack_right" type="Marker2D" parent="."]
position = Vector2(11, 0)

[node name="attack_left" type="Marker2D" parent="."]
position = Vector2(-11, 0)

[node name="unit_health_bar" parent="." instance=ExtResource("3_ltur1")]

[connection signal="body_entered" from="attackRadius" to="." method="_on_attack_radius_body_entered"]
[connection signal="body_exited" from="attackRadius" to="." method="_on_attack_radius_body_exited"]
[connection signal="body_entered" from="replusionForce" to="." method="_on_replusion_force_body_entered"]
[connection signal="body_exited" from="replusionForce" to="." method="_on_replusion_force_body_exited"]
[connection signal="timeout" from="attack_rate" to="." method="_on_attack_rate_timeout"]
[connection signal="timeout" from="attack_buffer" to="." method="_on_attack_buffer_timeout"]
